Switch to simpler webpack build format.

--- a/src/layout.pug
+++ b/src/layout.pug
@@ -1,13 +1,13 @@
 doctype html
 html(lang='en')
   head
-    block(name='title')
+    block title
       title Osteothai School
 
-    block(name='description')
+    block description
       meta(name='description' content='Osteothai School')
 
-    block(name='meta')
+    block meta
       meta(charset='utf-8')
       meta(http-equiv='X-UA-Compatible' content='IE=edge')
       meta(name='author' content='muji <https://tmpfs.org>')
@@ -15,18 +15,18 @@ html(lang='en')
       link(rel='canonical' href='https://osteothai.school')
       link(rel='icon' type='image/png' href='/assets/img/favicon.png?v=3')
 
-    block(name='keywords')
+    block keywords
       meta(name='keywords' content='osteothai, osteopath, thai massage, bodywork, healing')
 
-    block(name='stylesheets')
+    block stylesheets
 
   body(id='top' class='{{pageId}}')
-    block(name='header')
+    block header
 
-    block(name='content')
+    block content
 
-    block(name='footer')
+    block footer
 
-    block(name='noscript')
+    block noscript
 
-    block(name='javascript')
+    block javascript
